--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    padding: 2px;
+}
+
+.menu {
+    height: 100vh;
+    width: 200px;
+    background-color: rgb(231, 242, 247);
+    box-shadow: 2px 5px 5px black;
+    border-radius: 15px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+ul {
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+}
+
+li {
+    text-align: left;
+    width: 100%;
+    height: 28px;
+    background-color: rgb(215, 215, 215);
+    margin-bottom: 10px;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
